Correct gap issue

--- a/style.css
+++ b/style.css
@@ -88,10 +88,6 @@ header .container .row h2 a{
 	gap: .75em;
 }
 
-.wp-container-30 {
-	gap: 0!important;
-}
-
 .wp-container-35 {
 	justify-content: center;
 }
@@ -123,6 +119,7 @@ header .container .row h2 a{
 
 .contact .wp-block-columns {
 	margin-bottom: 0!important;
+	gap: 0!important;
 }
 
 .contact-container .col {
